[project]
name = "project-shadbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.19.0",
    "dotenv>=0.9.9",
    "fastapi==0.109.0",
    "pydantic==2.5.3",
    "requests==2.31.0",
    "uvicorn==0.27.0",
]
